#45541: unlock feeds by video ads

--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/vfEmptyViews"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent"
-             android:clickable="true">
+    android:id="@+id/vfEmptyViews"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:clickable="true">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -28,12 +28,18 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnStartRate"
                 style="@style/BigStretchedBlueButton"
+                android:layout_width="match_parent"
                 android:text="@string/buy_resources" />
+
+            <Button
+                style="@style/UlockButtonStyle"
+                android:layout_width="match_parent"
+                android:tag="btnUnlock" />
         </LinearLayout>
 
         <ImageView
@@ -70,21 +76,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_one"/>
+                android:src="@drawable/likes_male_one" />
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivTwo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_two"/>
+                android:src="@drawable/likes_male_two" />
 
             <com.topface.topface.ui.views.ImageViewRemote
                 android:id="@+id/ivThree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/likes_male_three"/>
+                android:src="@drawable/likes_male_three" />
 
         </LinearLayout>
 
@@ -101,12 +107,14 @@
         <Button
             android:id="@+id/btnBuyVip"
             style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_width="wrap_content"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:minWidth="210dp"
             android:text="@string/buying_vip_status" />
 
+        <Button
+            style="@style/UlockButtonStyle"
+            android:layout_width="210dp"
+            android:tag="btnUnlock" />
     </LinearLayout>
-
 </ViewFlipper>
