--- a/src/main/res/layout/layout_empty_visitors.xml
+++ b/src/main/res/layout/layout_empty_visitors.xml
@@ -32,7 +32,14 @@
     <Button
         android:id="@+id/btnBuyVip"
         style="@style/BigStretchedBlueButton"
+        android:layout_width="240dp"
         android:layout_below="@+id/tvText"
         android:layout_centerHorizontal="true"
         android:text="@string/buying_vip_status" />
+
+    <Button
+        android:id="@+id/btnUnlock"
+        style="@style/UlockButtonStyle"
+        android:layout_width="240dp"
+        android:layout_below="@+id/btnBuyVip" />
 </RelativeLayout>
