--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clickable="true">
 
     <ImageView
         android:id="@+id/ic_guitar"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_above="@+id/tvText"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
@@ -37,7 +37,7 @@
 
     <Button
         android:id="@+id/btnUnlock"
-        style="@style/UlockButtonStyle"
+        style="@style/UnlockButtonStyle"
         android:layout_width="240dp"
         android:layout_below="@+id/btnBuy" />
 </RelativeLayout>
