--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1211,7 +1211,7 @@
         <item name="android:minWidth">240dp</item>
     </style>
 
-    <style name="UlockButtonStyle" parent="BigStretchedBlueButton">
+    <style name="UnlockButtonStyle" parent="BigStretchedBlueButton">
         <item name="android:layout_marginTop">@dimen/unlock_button_margin_top</item>
         <item name="android:visibility">gone</item>
         <item name="android:layout_centerHorizontal">true</item>
