--- a/src/main/res/layout/profile_item_gift_grid.xml
+++ b/src/main/res/layout/profile_item_gift_grid.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
-
-    <com.topface.topface.ui.views.ImageViewRemote
-        android:id="@+id/profileGiftImage"
-        style="@style/Gift" />
-
-</LinearLayout>
+<com.topface.topface.ui.views.ImageViewRemote xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/profileGiftImage"
+    style="@style/Gift"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp" />
