#45541: unlock functionality by video ads, small changes

--- a/src/main/res/layout/layout_paid_likes_for_vip.xml
+++ b/src/main/res/layout/layout_paid_likes_for_vip.xml
@@ -56,7 +56,6 @@
             android:layout_width="match_parent"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:tag="btnUnlock"
-            android:textSize="17sp" />
+            android:tag="btnUnlock" />
     </LinearLayout>
 </ScrollView>
