--- a/src/main/res/layout/layout_empty_feed_controls.xml
+++ b/src/main/res/layout/layout_empty_feed_controls.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/controls_layout"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/buy_coins_button"
             style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:textSize="@dimen/unlock_likes_by_coins_button_text_size" />
 
         <ProgressBar
             android:id="@+id/prsLoading"
@@ -41,7 +41,7 @@
     <Button
         android:id="@+id/buy_vip_button"
         style="@style/Widget.Topface.Button.Big.Blue"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/buying_vip_status" />
