--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -75,4 +75,6 @@
 
     <dimen name="other_services_button_img_padding">7dp</dimen>
     <dimen name="unlock_button_margin_top">10dp</dimen>
+
+    <dimen name="unlock_likes_by_coins_button_text_size">15sp</dimen>
 </resources>
