--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -35,11 +35,6 @@
                 style="@style/BigStretchedBlueButton"
                 android:layout_width="match_parent"
                 android:text="@string/buy_resources" />
-
-            <Button
-                style="@style/UnlockButtonStyle"
-                android:layout_width="match_parent"
-                android:tag="btnUnlock" />
         </LinearLayout>
 
         <ImageView
@@ -113,8 +108,8 @@
             android:text="@string/buying_vip_status" />
 
         <Button
+            android:id="@+id/btnUnlock"
             style="@style/UnlockButtonStyle"
-            android:layout_width="210dp"
-            android:tag="btnUnlock" />
+            android:layout_width="210dp" />
     </LinearLayout>
 </ViewFlipper>
