--- a/src/main/res/layout/item_feed_layout_time_count.xml
+++ b/src/main/res/layout/item_feed_layout_time_count.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ListItemContainer">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ListItemContainer"
+    android:orientation="horizontal">
 
     <include
         android:id="@+id/ifp_avatar"
         layout="@layout/item_feed_part_avatar" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/ifp_avatar"
-        android:orientation="vertical"
-        android:paddingBottom="1dp">
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ifp_name_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="bottom"
             android:orientation="horizontal">
 
             <!--
@@ -43,7 +43,7 @@
             <TextView
                 android:id="@+id/ifp_time"
                 style="@style/ListTime"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
@@ -51,15 +51,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ifp_name_container"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:baselineAligned="false"
+            android:gravity="top"
             android:orientation="horizontal">
 
             <include
                 android:id="@+id/ifp_text"
                 layout="@layout/item_feed_part_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
@@ -68,7 +69,6 @@
                 layout="@layout/item_feed_part_counter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+    </LinearLayout>
+</LinearLayout>
