--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -167,4 +167,15 @@
     <color name="button_price_per_item_text_color">#333333</color>
     <color name="button_total_price_text_color">#333333</color>
     <color name="sticker_popular_bg_normal">#e1690d</color>
+    <color name="sticker_popular_bg_pressed">#e6975b</color>
+    <color name="sticker_popular_bg_disable">#f1cdb1</color>
+    <color name="sticker_best_value_bg_normal">#06a122</color>
+    <color name="sticker_best_value_bg_pressed">#48a959</color>
+    <color name="sticker_best_value_bg_disable">#7bae85</color>
+    <color name="button_purchase_blue_bg_pressed_color">#62c4f5</color>
+    <color name="button_purchase_blue_bg_released_color">#03a9f4</color>
+    <color name="button_purchase_blue_bg_disable_color">#b3e5fb</color>
+    <color name="button_purchase_green_bg_pressed_color">#50ef7f</color>
+    <color name="button_purchase_green_bg_released_color">#0def50</color>
+    <color name="button_purchase_green_bg_disable_color">#9df2b6</color>
 </resources>
