--- a/src/main/res/layout/buy_button_ver_1.xml
+++ b/src/main/res/layout/buy_button_ver_1.xml
@@ -46,6 +46,9 @@
         android:id="@+id/buttonDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="4dp"
         android:layout_marginTop="@dimen/description_margin_top"
         android:orientation="horizontal">
 
