--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -85,4 +85,6 @@
     <dimen name="button_sticker_text_size">13sp</dimen>
     <dimen name="button_description_text_size">13sp</dimen>
     <dimen name="description_margin_top">4dp</dimen>
+    <dimen name="default_purchase_button_container_padding">5dp</dimen>
+    <dimen name="default_purchase_button_container_padding_top">56dp</dimen>
 </resources>
