--- a/src/main/res/layout/buy_button_ver_1.xml
+++ b/src/main/res/layout/buy_button_ver_1.xml
@@ -1,85 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/button"
+    <RelativeLayout
+        android:id="@+id/itContainer"
+        style="@style/ViewWithElevation"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height">
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:padding="5dp">
 
         <TextView
-            android:id="@+id/buttonTitle"
+            android:id="@+id/itText"
+            style="@style/WhiteText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxLines="1"
-            android:textColor="@color/button_title_text_color"
-            android:textSize="@dimen/button_title_text_size"
-            tools:text="Button Name" />
-
-        <TextView
-            android:id="@+id/buttonSticker"
-            android:layout_width="@dimen/sticker_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_centerInParent="true"
             android:gravity="center"
-            android:textColor="@color/button_sticker_text_color"
-            android:textSize="@dimen/button_sticker_text_size"
-            tools:text="Popular" />
+            android:paddingLeft="10dp"
+            tools:text="@string/buy_mobile_payments" />
 
         <ProgressBar
             android:id="@+id/marketWaiter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/buttonDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="@dimen/description_margin_top"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/discount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:textColor="@color/button_discount_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="Button Name" />
-
-        <TextView
-            android:id="@+id/pricePerItem"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:textColor="@color/button_price_per_item_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="$ 5.99/month" />
-
-        <TextView
-            android:id="@+id/totalPrice"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textColor="@color/button_total_price_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="Total: $11.97" />
-    </LinearLayout>
-</LinearLayout>
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+    </RelativeLayout>
+</RelativeLayout>
