#45876: v2 views version is ready

--- a/src/main/res/layout/buy_button_ver_2.xml
+++ b/src/main/res/layout/buy_button_ver_2.xml
@@ -57,7 +57,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="left"
+            android:lines="1"
+            android:maxLines="1"
             android:textColor="@color/button_discount_text_color"
             android:textSize="@dimen/button_description_text_size"
             tools:text="Button Name" />
@@ -67,7 +70,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="center_horizontal"
+            android:lines="1"
+            android:maxLines="1"
             android:textColor="@color/button_price_per_item_text_color"
             android:textSize="@dimen/button_description_text_size"
             tools:text="$ 5.99/month" />
@@ -77,7 +83,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="right"
+            android:lines="1"
+            android:maxLines="1"
             android:textColor="@color/button_total_price_text_color"
             android:textSize="@dimen/button_description_text_size"
             tools:text="Total: $11.97" />
