--- a/src/main/res/layout/buy_button_ver_1.xml
+++ b/src/main/res/layout/buy_button_ver_1.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    <data>
 
-    <RelativeLayout
-        android:id="@+id/itContainer"
-        style="@style/ViewWithElevation"
+        <import type="android.view.View" />
+
+        <variable
+            name="handler"
+            type="com.topface.topface.ui.views.BuyButtonVer1.BuyButtonVersion1Handler" />
+    </data>
+
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:padding="5dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/itText"
-            style="@style/WhiteText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            tools:text="@string/buy_mobile_payments" />
+        <RelativeLayout
+            android:id="@+id/itContainer"
+            style="@style/ViewWithElevation"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="12dp"
+            android:background="@{handler.containerBackgroundRes}"
+            android:onClick="@{handler.onButtonClick}"
+            android:paddingBottom="@{handler.containerPaddingBottom}"
+            android:paddingLeft="@{handler.containerPaddingLeft}"
+            android:paddingRight="@{handler.containerPaddingRight}"
+            android:paddingTop="@{handler.containerPaddingTop}"
+            android:visibility="@{handler.containerVisibility}">
 
-        <ProgressBar
-            android:id="@+id/marketWaiter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/itText"
+                style="@style/WhiteText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:text="@{handler.titleText}"
+                android:visibility="@{handler.titleVisibility}"
+                tools:text="@string/buy_mobile_payments" />
+
+            <ProgressBar
+                android:id="@+id/marketWaiter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="@{handler.progressVisibility}" />
+        </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
+</layout>
