--- a/src/main/res/layout/buy_button_ver_2.xml
+++ b/src/main/res/layout/buy_button_ver_2.xml
@@ -1,94 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    <data>
 
-    <FrameLayout
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height">
+        <import type="android.view.View" />
 
-        <TextView
-            android:id="@+id/buttonTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxLines="1"
-            android:textColor="@color/button_title_text_color"
-            android:textSize="@dimen/button_title_text_size"
-            tools:text="Button Name" />
-
-        <TextView
-            android:id="@+id/buttonSticker"
-            android:layout_width="@dimen/sticker_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:gravity="center"
-            android:textColor="@color/button_sticker_text_color"
-            android:textSize="@dimen/button_sticker_text_size"
-            tools:text="Popular" />
-
-        <ProgressBar
-            android:id="@+id/marketWaiter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </FrameLayout>
+        <variable
+            name="handler"
+            type="com.topface.topface.ui.views.BuyButtonVer2.BuyButtonVersion1Handler" />
+    </data>
 
     <LinearLayout
-        android:id="@+id/buttonDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="@dimen/description_margin_top"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/discount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="left"
-            android:lines="1"
-            android:maxLines="1"
-            android:textColor="@color/button_discount_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="Button Name" />
+        <FrameLayout
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:background="@{handler.buttonBackgroundRes}"
+            android:onClick="@{handler.onButtonClick}"
+            android:visibility="@{handler.buttonVisibility}">
 
-        <TextView
-            android:id="@+id/pricePerItem"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="center_horizontal"
-            android:lines="1"
-            android:maxLines="1"
-            android:textColor="@color/button_price_per_item_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="$ 5.99/month" />
+            <TextView
+                android:id="@+id/buttonTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:ellipsize="end"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingLeft="@{handler.buttonTextPaddingLeft}"
+                android:paddingRight="@{handler.buttonTextPaddingRight}"
+                android:text="@{handler.buttonText}"
+                android:textColor="@color/button_title_text_color"
+                android:textSize="@dimen/button_title_text_size"
+                android:visibility="@{handler.buttonTextVisibility}" />
 
-        <TextView
-            android:id="@+id/totalPrice"
-            android:layout_width="0dp"
+            <TextView
+                android:id="@+id/buttonSticker"
+                android:layout_width="@dimen/sticker_width"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:background="@{handler.stickerBackgroundRes}"
+                android:gravity="center"
+                android:text="@{handler.stickerText}"
+                android:textColor="@color/button_sticker_text_color"
+                android:textSize="@dimen/button_sticker_text_size"
+                android:visibility="@{handler.stickerTextVisibility}" />
+
+            <ProgressBar
+                android:id="@+id/marketWaiter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="@{handler.progressVisibility}" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/buttonDetails"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="right"
-            android:lines="1"
-            android:maxLines="1"
-            android:textColor="@color/button_total_price_text_color"
-            android:textSize="@dimen/button_description_text_size"
-            tools:text="Total: $11.97" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="@dimen/description_margin_top"
+            android:orientation="horizontal"
+            android:visibility="@{handler.buttonDescriptionVisibility}">
+
+            <TextView
+                android:id="@+id/discount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="left"
+                android:lines="1"
+                android:maxLines="1"
+                android:text="@{handler.discountText}"
+                android:textColor="@color/button_discount_text_color"
+                android:textSize="@dimen/button_description_text_size"
+                android:visibility="@{handler.discountVisibility}" />
+
+            <TextView
+                android:id="@+id/pricePerItem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_horizontal"
+                android:lines="1"
+                android:maxLines="1"
+                android:text="@{handler.pricePerItemText}"
+                android:textColor="@color/button_price_per_item_text_color"
+                android:textSize="@dimen/button_description_text_size"
+                android:visibility="@{handler.pricePerItemVisibility}" />
+
+            <TextView
+                android:id="@+id/totalPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:lines="1"
+                android:maxLines="1"
+                android:text="@{handler.totalPriceText}"
+                android:textColor="@color/button_total_price_text_color"
+                android:textSize="@dimen/button_description_text_size"
+                android:visibility="@{handler.totalPriceVisibility}" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
