--- a/src/main/res/layout/restore_account_activity.xml
+++ b/src/main/res/layout/restore_account_activity.xml
@@ -1,42 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingTop="76dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_profile" />
+        <variable
+            name="handlers"
+            type="com.topface.topface.ui.RestoreAccountActivity.Handlers" />
+    </data>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:paddingBottom="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30sp"
-        android:paddingTop="44dp"
-        android:text="@string/delete_account_will_be_restored_are_you_sure"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:orientation="vertical"
+        android:paddingTop="@dimen/restore_top_padding">
 
-    <Button
-        android:id="@+id/restore_account"
-        style="@style/BigStretchedBlueButton"
-        android:minHeight="44dp"
-        android:text="@string/restore"
-        android:textSize="18sp" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_profile" />
 
-    <Button
-        android:id="@+id/cancel_restore"
-        style="@style/BigStretchedGrayButton"
-        android:layout_marginTop="12dp"
-        android:minHeight="44dp"
-        android:text="@string/general_cancel"
-        android:textSize="18sp" />
+        <TextView
+            style="@style/MessageRestore"
+            android:text="@string/delete_account_will_be_restored_are_you_sure" />
 
+        <Button
+            android:id="@+id/restore_account"
+            style="@style/BigStretchedBlueButtonRestore"
+            android:onClick="@{handlers.onRestoreClick}"
+            android:text="@string/restore"/>
 
-</LinearLayout>
+        <Button
+            android:id="@+id/cancel_restore"
+            style="@style/BigStretchedGrayButtonRestore"
+            android:layout_marginTop="@dimen/restore_buttons_padding"
+            android:onClick="@{handlers.onCancelClick}"
+            android:text="@string/general_cancel" />
+    </LinearLayout>
+</layout>
