--- a/src/main/res/layout/fragment_buy_premium.xml
+++ b/src/main/res/layout/fragment_buy_premium.xml
@@ -11,7 +11,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
 
 
             <LinearLayout
@@ -46,12 +47,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
-
-                <ViewStub
-                    android:id="@+id/libertyItemsStub"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout="@layout/vip_liberty_list" />
             </LinearLayout>
 
             <LinearLayout
