--- a/src/main/res/layout/vip_liberty_list.xml
+++ b/src/main/res/layout/vip_liberty_list.xml
@@ -12,7 +12,8 @@
         android:paddingTop="16dp"
         android:text="@string/vip_info_title"
         android:textColor="@color/main_title_text_color"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <com.topface.topface.ui.views.VipLibertyView
         android:layout_width="match_parent"
