--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1262,4 +1262,13 @@
         <item name="android:textColor">@color/take_photo_screen_text_medium</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="BuyButtonVer2DescriptionStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:lines">2</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:textSize">@dimen/button_description_text_size</item>
+    </style>
 </resources>
