--- a/src/blueStacks/res/values-sv/strings-profile.xml
+++ b/src/blueStacks/res/values-sv/strings-profile.xml
@@ -222,8 +222,7 @@
   <string name="form_habits_restaurants_3">Dina favorita restauranger</string>
   <string name="form_detail_about_dating_0">Om första dejten med en tjej</string>
   <string name="form_detail_about_dating_1">Om bästa första dejten</string>
-  <string name="form_detail_about_dating_2">Hur skall du träffas med en tjej för första gången?
-  </string>
+  <string name="form_detail_about_dating_2">Hur skall du träffas med en tjej för första gången?</string>
   <string name="form_detail_about_dating_3">Beskriv en idyllisk dejt</string>
   <string name="form_detail_archievements_0">Livets största framgångar</string>
   <string name="form_detail_archievements_1">Livets största framgångar</string>
