--- a/src/derived/res/values-it/strings-profile.xml
+++ b/src/derived/res/values-it/strings-profile.xml
@@ -31,8 +31,7 @@
     <string name="profile_form_communication_female_0">Molto socievole</string>
     <string name="profile_form_communication_female_1">Aperta alle persone interessanti</string>
     <string name="profile_form_communication_female_2">Scrivimi e poi vedremo</string>
-    <string name="profile_form_communication_female_3">Socializzo solo con le persone scelte
-    </string>
+    <string name="profile_form_communication_female_3">Socializzo solo con le persone scelte</string>
     <string name="profile_form_character_male_0">Socievole</string>
     <string name="profile_form_character_male_1">Difficile</string>
     <string name="profile_form_character_male_2">Deciso</string>
@@ -224,8 +223,7 @@
     <string name="form_habits_restaurants_3">I tuoi ristoranti preferiti</string>
     <string name="form_detail_about_dating_0">Sul primo incontro con la ragazza</string>
     <string name="form_detail_about_dating_1">Di un primo appuntamento ideale</string>
-    <string name="form_detail_about_dating_2">Come immagini il primo incontro con una ragazza?
-    </string>
+    <string name="form_detail_about_dating_2">Come immagini il primo incontro con una ragazza?</string>
     <string name="form_detail_about_dating_3">Descrivi l’appuntamento ideale</string>
     <string name="form_detail_archievements_0">I successi più significativi nella vita</string>
     <string name="form_detail_archievements_1">I successi più significativi nella vita</string>
