#47786: show group page

--- a/src/main/res/layout/ok_profile_fragment.xml
+++ b/src/main/res/layout/ok_profile_fragment.xml
@@ -42,6 +42,7 @@
                 <Button
                     android:id="@+id/okProfileButtonTopfaceTeam"
                     style="@style/OkProfileButtons"
+                    android:onClick="@{handler.onButtonShowGroupClick}"
                     android:text="@string/vk_profile_button_tf_group" />
 
             </LinearLayout>
