--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1238,7 +1238,9 @@
         <item name="android:layout_marginBottom">12dp</item>
     </style>
 
-    <style name="OkProfileButtons" parent="VkProfileButtons" />
+    <style name="OkProfileButtons" parent="VkProfileButtons">
+        <item name="android:visibility">visible</item>
+    </style>
 
     <style name="OkProfileUserName" parent="VkProfileUserName" />
 
